fix stage 1